@@ -1,5 +1,7 @@
 Revision history for Perl extension Shlomif::NavMenu.
 
+    - Update the URLs to the repository, and sites.
+
 1.0602    Mon Sep 17 17:19:29 IDT 2012
     - Get rid of trailing space.
     - Update the contact details.
